--- a/package.json
+++ b/package.json
@@ -70,14 +70,15 @@
     "@types/cytoscape-dagre": "^2.3.0",
     "@types/ejs": "^3.1.0",
     "@types/fs-extra": "^11.0.1",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.178",
+    "@types/node": "^18.15.11",
     "@types/omelette": "^0.4.2",
     "@types/plist": "^3.0.2",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
-    "jest": "^28.1.0",
+    "jest": "^29.5.0",
     "oclif": "^3",
     "path-browserify": "^1.0.1",
     "plist": "^3.0.6",
