--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "baseUrl": "./",
     "declaration": true,
     "esModuleInterop": true,
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es2016", "es2017", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -24,7 +24,7 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "es2015",
+    "target": "es2016",
     "paths": {
       "*": ["src/*"]
     }
