--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@terran-one/cwsc",
+  "name": "@terran-one/cwsc",
   "version": "0.1.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -22,14 +22,12 @@
     "format:fix": "prettier --write ./src/**/*.ts",
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "eslint src --ext .js,.ts --fix",
-    "parse": "ts-node src/parser.ts",
+    "parse": "ts-node src/parser/index.ts",
     "viz": "ts-node src/vizserver.ts",
     "cwsc": "ts-node src/cli.ts",
-    "ir": "ts-node src/ir.ts",
-    "fw": "ts-node src/filewriter.ts",
-    "types": "ts-node src/typesystem.ts",
     "size": "size-limit",
     "analyze": "size-limit --why",
+    "gen:tm-grammar": "ts-node ./scripts/gen-tm-grammar.ts",
     "antlr-lexer": "antlr4ts ./grammar/CWScriptLexer.g4 -o ./src",
     "antlr-parser": "antlr4ts -visitor ./grammar/CWScriptParser.g4 -o ./src -lib ./src/grammar",
     "antlr": "npm run antlr-lexer && npm run antlr-parser",
@@ -68,14 +66,17 @@
     "@types/ejs": "^3.1.0",
     "@types/jest": "^27.5.0",
     "@types/lodash": "^4.14.178",
+    "@types/plist": "^3.0.2",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
     "jest": "^28.1.0",
+    "plist": "^3.0.6",
     "prettier": "^2.6.1",
     "size-limit": "^7.0.8",
     "terser-webpack-plugin": "4",
-    "ts-jest": "^28.0.2",
+    "tmlanguage-generator": "^0.4.0",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
@@ -84,31 +85,22 @@
     "typedoc": "^0.22.13",
     "typescript": "^4.6.4",
     "typescript-call-graph": "^0.0.3",
-    "webpack": "^5.70.0",
+    "webpack": "5.76.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@iarna/toml": "^2.2.5",
-    "antlr4-c3": "^2.2.1",
     "antlr4ts": "^0.5.0-alpha.4",
     "assert": "^2.0.0",
-    "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
-    "chalk": "4.1.0",
     "commander": "^9.0.0",
-    "cytoscape": "^3.21.0",
-    "cytoscape-dagre": "^2.4.0",
-    "dot-prop": "^7.2.0",
     "ejs": "^3.1.6",
     "immutable": "^4.0.0",
     "lodash": "^4.17.21",
-    "omit-deep-lodash": "^1.1.6",
-    "prettycli": "^1.4.3",
     "process": "^0.11.10",
     "source-map": "^0.7.3",
     "stream-browserify": "^3.0.0",
     "toml": "^3.0.0",
-    "yaml": "^1.10.2",
-    "yesno": "^0.3.1"
+    "vscode-languageserver": "^8.1.0",
+    "yaml": "^1.10.2"
   }
 }
