--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,23 @@
 {
-  "include": ["src", "types"],
-  "exclude": ["/node_modules/", "./src/**/*.spec.ts"],
+  "include": [
+    "src",
+    "types"
+  ],
+  "exclude": [
+    "/node_modules/",
+    "./src/**/*.spec.ts"
+  ],
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "baseUrl": "./",
     "declaration": true,
     "esModuleInterop": true,
-    "lib": ["es2016", "es2017", "dom"],
+    "lib": [
+      "es2016",
+      "es2017",
+      "dom"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -26,7 +36,9 @@
     "strictPropertyInitialization": true,
     "target": "es2016",
     "paths": {
-      "*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   }
 }
