--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
     "jest": "^28.1.0",
+    "path-browserify": "^1.0.1",
     "plist": "^3.0.6",
     "prettier": "^2.6.1",
     "size-limit": "^7.0.8",
@@ -80,7 +81,6 @@
     "ts-loader": "^9.2.8",
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.4",
@@ -89,18 +89,23 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@types/omelette": "^0.4.2",
     "antlr4ts": "^0.5.0-alpha.4",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
+    "chalk": "^5.2.0",
     "commander": "^9.0.0",
     "ejs": "^3.1.6",
     "immutable": "^4.0.0",
+    "listr": "^0.14.3",
     "lodash": "^4.17.21",
+    "omelette": "^0.4.17",
     "process": "^0.11.10",
     "source-map": "^0.7.3",
     "stream-browserify": "^3.0.0",
     "toml": "^3.0.0",
     "vscode-languageserver": "^8.1.0",
+    "winston": "^3.8.2",
     "yaml": "^1.10.2"
   }
 }
