--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   ],
   "exclude": [
     "/node_modules/",
-    "./src/**/*.spec.ts"
+    "./src/**/*.test.ts"
   ],
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
@@ -36,7 +36,7 @@
     "strictPropertyInitialization": true,
     "target": "es2016",
     "paths": {
-      "@/*": [
+      "*": [
         "src/*"
       ]
     }
