refactor: Refactor CWScript CLI command structure and improve error handling
- Improve CLI command `parse.ts` by adding error handling if source file parsing fails and writing parsed result to file if `flags.out` is provided.
- Enhance `BaseCommand.ts` to show additional CWScript diagnostics with `show-hints` and `show-warnings` flags, change default for `show-warnings` to true, and change return type of `run` method to `Promise<any>`.
- Clean up `oclif.manifest.json` by removing unused commands, flags, and options.
- Update `package.json` by renaming the `cwsc` script to `cli`, changing the `cwsc` script to execute a different file, using `bun` instead of `yarn` in the `prepack` script, and changing the commands in the `antlr` script to use `bun` instead of `npm`.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cwsc": "./bin/run"
   },
   "scripts": {
-    "prepack": "yarn build && oclif manifest",
+    "prepack": "bun run build && oclif manifest",
     "postpack": "shx rm -f oclif.manifest.json",
     "build": "shx rm -rf dist && tsc --module commonjs && webpack --mode production",
     "build:types": "tsc --declaration --emitDeclarationOnly",
@@ -28,13 +28,13 @@
     "lint:fix": "eslint src --ext .js,.ts --fix",
     "parse": "ts-node src/parser/index.ts",
     "viz": "ts-node src/vizserver.ts",
-    "cwsc": "ts-node src/cli.ts",
+    "cli": "./bin/dev",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "gen:tm-grammar": "ts-node ./scripts/gen-tm-grammar.ts",
     "antlr-lexer": "antlr4ts ./grammar/CWScriptLexer.g4 -o ./src",
     "antlr-parser": "antlr4ts -visitor ./grammar/CWScriptParser.g4 -o ./src -lib ./src/grammar",
-    "antlr": "npm run antlr-lexer && npm run antlr-parser",
+    "antlr": "bun run antlr-lexer && bun run antlr-parser",
     "doc": "typedoc",
     "prepublishOnly": "npm run build",
     "test": "jest __tests__"
