refactor: Add error reporting with code snippets to CLI and interpreter.
- Add new error reporting functionality for parsing errors
- New `dist/util/diagnostics.js` file with `errorReportWithCodeSnippet` function
- `errorReportWithCodeSnippet` takes in filename, sourceText, and diagnostic and generates a detailed error report with highlighted code snippets, colored output, and a pointer to the error location
- Update `BaseCommand.js` and `parse.ts` with error handling and output options
- Update dependencies and mappings for improved functionality and performance

--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "antlr4ts": "^0.5.0-alpha.4",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
-    "chalk": "^5.2.0",
+    "chalk": "4.1.2",
     "commander": "^9.0.0",
     "ejs": "^3.1.6",
     "fs-extra": "^11.1.1",
