--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "source-map": "^0.7.3",
     "stream-browserify": "^3.0.0",
     "toml": "^3.0.0",
+    "ts-results": "^3.3.0",
     "vscode-languageserver": "^8.1.0",
     "winston": "^3.8.2",
     "yaml": "^1.10.2"
