--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.8",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.55",
+    "@swc/jest": "^0.2.26",
     "@types/chalk": "^2.2.0",
     "@types/cytoscape": "^3.19.4",
     "@types/cytoscape-dagre": "^2.3.0",
@@ -77,16 +80,16 @@
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
-    "jest": "^28.1.0",
+    "jest": "^29.5.0",
     "oclif": "^3",
     "path-browserify": "^1.0.1",
     "plist": "^3.0.6",
     "prettier": "^2.6.1",
     "shx": "^0.3.4",
     "size-limit": "^7.0.8",
+    "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "4",
     "tmlanguage-generator": "^0.4.0",
-    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
