--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "files": [
     "bin",
     "dist",
-    "src",
-    "/oclif.manifest.json"
+    "src"
   ],
   "engines": {
     "node": ">=10"
@@ -18,8 +17,6 @@
     "cwsc": "./bin/run"
   },
   "scripts": {
-    "prepack": "bun run build && oclif manifest",
-    "postpack": "shx rm -f oclif.manifest.json",
     "build": "shx rm -rf dist && tsc --module commonjs && webpack --mode production",
     "build:types": "tsc --declaration --emitDeclarationOnly",
     "format": "prettier --check ./src/**/*.ts",
@@ -34,9 +31,9 @@
     "gen:tm-grammar": "ts-node ./scripts/gen-tm-grammar.ts",
     "antlr-lexer": "antlr4ts ./grammar/CWScriptLexer.g4 -o ./src",
     "antlr-parser": "antlr4ts -visitor ./grammar/CWScriptParser.g4 -o ./src -lib ./src/grammar",
-    "antlr": "bun run antlr-lexer && bun run antlr-parser",
+    "antlr": "yarn run antlr-lexer && yarn run antlr-parser",
     "doc": "typedoc",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "yarn run build",
     "test": "jest __tests__"
   },
   "husky": {
@@ -52,22 +49,8 @@
   },
   "author": "Terran One LLC",
   "module": "dist/cwsc.esm.js",
-  "oclif": {
-    "bin": "cwsc",
-    "dirname": "cwsc",
-    "commands": "./dist/cli/commands",
-    "plugins": [
-      "@oclif/plugin-help",
-      "@oclif/plugin-autocomplete"
-    ],
-    "topicSeparator": " ",
-    "topics": {}
-  },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.55",
-    "@swc/jest": "^0.2.26",
     "@types/chalk": "^2.2.0",
     "@types/cytoscape": "^3.19.4",
     "@types/cytoscape-dagre": "^2.3.0",
@@ -81,15 +64,14 @@
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
     "jest": "^29.5.0",
-    "oclif": "^3",
     "path-browserify": "^1.0.1",
     "plist": "^3.0.6",
     "prettier": "^2.6.1",
     "shx": "^0.3.4",
     "size-limit": "^7.0.8",
-    "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "4",
     "tmlanguage-generator": "^0.4.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.5.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
@@ -101,9 +83,6 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@oclif/core": "^2",
-    "@oclif/plugin-autocomplete": "^2.1.9",
-    "@oclif/plugin-help": "^5",
     "antlr4ts": "^0.5.0-alpha.4",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
