handlebar template in progress

--- a/package.json
+++ b/package.json
@@ -90,9 +90,11 @@
     "commander": "^9.0.0",
     "ejs": "^3.1.6",
     "fs-extra": "^11.1.1",
+    "handlebars": "^4.7.8",
     "immutable": "^4.0.0",
     "listr": "^0.14.3",
     "lodash": "^4.17.21",
+    "mustache": "^4.2.0",
     "omelette": "^0.4.17",
     "process": "^0.11.10",
     "source-map": "^0.7.3",
